ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kf-fe-ingress
  namespace: klinfit
  labels:
    app: klinfit-fe
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /test-api
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /getPartners
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /getMembers
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /getMembersFull
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /getOrders
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /getOrdersSet
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /login
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /getLockersUsers
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /getLockers
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /registerMember
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /createPartner
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /deletePartner/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /deleteMember/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /desactivatePartner/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /activatePartner/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /editPartner/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /editMember/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-be-members-np-service
                port:
                  number: 80
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: kf-fe-np-service
                port:
                  number: 80
